force-app/main/default/objects/Project_Assignment__c/Project_Assignment__c.object-meta.xml
<CustomObject>
    <label>Project Assignment</label>
    <nameField>
        <label>Project Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>