force-app/main/default/objects/Project_Assignment__c/fields/Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate__c</fullName>
    <label>Billing Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>