force-app/main/default/objects/Project_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Assignments</relationshipLabel>
    <relationshipName>Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>